Fixed tab layout issue, fixed bug in tab, added jquery for proper tab opening

--- a/FSICAutomaton/css/styles.css
+++ b/FSICAutomaton/css/styles.css
@@ -351,6 +351,25 @@ ul.navbar-nav {
 	color: rgba(0,0,0, .7);
 }
 
+.buttonLinkTwo{
+	position: relative;
+	margin-top: 2%;
+	text-align: center;
+	background:none!important;
+    border: none; 
+    padding: 0!important;   
+    font-family: 'Exo', sans-serif;
+    color: black;
+    font-size: 20px;
+    text-decoration: none;
+    cursor:pointer;
+}
+
+.buttonLinkTwo:hover{
+	text-decoration: underline;
+	font-weight: bold;
+}
+
 .card {
   background: #fff;
   border-radius: 2px;
@@ -371,6 +390,20 @@ ul.navbar-nav {
   	display: flex;
   	align-items: center;
   	justify-content: center;
+}
+
+.card-c {
+ 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  	padding: 20px; 
+  	display: flex;
+  	align-items: center;
+  	justify-content: center;
+  	width: 250px;
+  	height: 300px;
+}
+
+.card-c:hover {
+ 	box-shadow: 0 14px 28px rgba(0,0,0,0.35), 0 10px 10px rgba(0,0,0,0.35);
 }
 
 .dashContainer{
